Adding stability around ordering